criando um teste unitario

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Lanchonete_JBFoods.jar
+dist.jar=${dist.dir}/Lanchonete_JBFoods1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Lanchonete_JBFoods
+dist.jlink.output=${dist.jlink.dir}/Lanchonete_JBFoods1
 excludes=
 file.reference.mysql-connector-j-9.4.0.jar=C:\\Users\\Samara\\Documents\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar
 includes=**
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Lanchonete_JBFoods
+jlink.launcher.name=Lanchonete_JBFoods1
 main.class=lanchonete_jbfoodsMain.Lanchonete_JBFoods
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
